--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 	    <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
    		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" 
           rel="stylesheet" type="text/css">
-		<style type="text/css">
+		
+		 <style type="text/css">
+
+				/* lists */
+				ul.plain {list-style-type:square}
+
+				ul {
+					list-style-image: url('robot-arm.gif');
+				}
 
 				/* large desktop*/
 				@media (min-width: 980px) {
@@ -79,6 +87,9 @@
 				}
 
 				/* Marketing Copy and Footer */
+				.bullet {
+					padding-top: 1%;
+				}
 				.copy {
 					padding-top: 2.5%;
 					padding-bottom: 2.5%;
@@ -126,18 +137,18 @@
 			<!-- Font and paired font of .heading/.subheading -->
 			<div class="row-fluid heading">
 				<div class="span12">
-					<h1>Product</h1>
+					<h1>R-Home</h1>
 				</div>
 			</div>
 			<div class="row-fluid subheading">
 					<div class="span12">
 					<!-- Special typography from Bootstrap -->
-					<p class="lead">One sentence description.</p>
+					<p class="lead">Feel at home where ever you are!</p>
 				</div>
 			</div>
 			<div class="row-fluid pitch">
 				<div class="span5 offset1 video">
-					<img class="img-polaroid" src="http://placehold.it/480x300">
+					<img class="img" src="http://i.imgur.com/SIGJU2i.png">
 				</div>
 
 				<div class="span5 actions">
@@ -145,17 +156,17 @@
 						<div class="statistics">
 							<div class="span4">
 								<div class="linediv-l">
-									<h3>1000</h3><p>backers</p>
+									<h3>0</h3><p>backers</p>
 								</div>
 							</div>
 							<div class="span4">
 								<div class="linediv-c">
-									<h3>$6000</h3> <p> of $10,000</p>
+									<h3>0</h3> <p> of XXXX</p>
 								</div>
 							</div>
 							<div class="span4">
 								<div class="linediv-r">
-									<h3>10</h3> <p>days left</p>
+									<h3>???</h3> <p>days left</p>
 								</div>
 							</div>
 						</div>
@@ -181,64 +192,172 @@
 					</div>
 				</div>
 			</div>
+
 			<!-- Marketing copy -->
+			<!-- Marketing copy -->
+			<div class="row-fluid section1">
+				<div class="span10 offset1 copy">
+					<p>
+						R-Home is a modular system with two main subsystem. At the core there is 
+						the home automation which includes data collection (temperature, 
+						humidity, status, image,...), programmed actions (keep temperatue, water
+						plants, lights on/off), instant actions (play music, change ilumination,
+						prepare bath).
+						On the surface the user interface enables full control and setup of all
+					    the components at the core. In addition, it can be also use remotly from
+						where ever you are provided you are have internet access.	
+				   			
+					</p>
+				</div>
+			</div>
+			<div class="row-fluid section1">
+				<div class="span1 offset1">
+					<img class="img" src="http://i.imgur.com/njXSLaC.png"/>
+				</div>
+				<div class="span9 bullet">
+					<div class="accordion" id="accordion1">
+						<div class="accordion-group">
+							<div class="accordion-heading">
+								<a class="accordion-toggle" data-toggle="collapse"
+									data-parent="#accordion1" href="#collapseOne">
+									Secure
+								</a>
+							</div>
+							<div id="collapseOne" class="accordion-body collapse">
+								<div class="accordion-inner">
+									If you trust your online banking you trust us, we use the same
+									technology
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row-fluid section1">
+				<div class="span1 offset1">
+					<img class="img" src="http://i.imgur.com/O3L48JK.png"/>
+				</div>
+				<div class="span9 bullet">
+					<div class="accordion" id="accordion2">
+						<div class="accordion-group">
+							<div class="accordion-heading">
+								<a class="accordion-toggle" data-toggle="collapse"
+									data-parent="#accordion2" href="#collapseTwo">
+									Flexible
+								</a>
+							</div>
+							<div id="collapseTwo" class="accordion-body collapse">
+								<div class="accordion-inner">
+									Customizable to your needs with different modules and
+									packages.
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row-fluid section1">
+				<div class="span1 offset1">
+					<img class="img" src="http://i.imgur.com/wxKGsy8.png"/>
+				</div>
+				<div class="span9 bullet">
+					<div class="accordion" id="accordion3">
+						<div class="accordion-group">
+							<div class="accordion-heading">
+								<a class="accordion-toggle" data-toggle="collapse"
+									data-parent="#accordion3" href="#collapseThree">
+									Compatible
+								</a>
+							</div>
+							<div id="collapseThree" class="accordion-body collapse">
+								<div class="accordion-inner">
+									Usable with most of your existing appliances, very
+									little intrussion.
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row-fluid section1">
+				<div class="span1 offset1">
+					<img class="img" src="http://i.imgur.com/xmyTsLP.png"/>
+				</div>
+				<div class="span9 bullet">
+					<div class="accordion" id="accordion4">
+						<div class="accordion-group">
+							<div class="accordion-heading">
+								<a class="accordion-toggle" data-toggle="collapse"
+									data-parent="#accordion4" href="#collapseFour">
+									Quality
+								</a>
+							</div>
+							<div id="collapseFour" class="accordion-body collapse">
+								<div class="accordion-inner">
+									Enhanced quality through professional standars and
+									high coverage testing.
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row-fluid section1">
+				<div class="span1 offset1">
+					<img class="img" src="http://i.imgur.com/RKDOQAN.png"/>
+				</div>
+				<div class="span9 bullet">
+					<div class="accordion" id="accordion5">
+						<div class="accordion-group">
+							<div class="accordion-heading">
+								<a class="accordion-toggle" data-toggle="collapse"
+									data-parent="#accordion5" href="#collapseFive">
+									Easy
+								</a>
+							</div>
+							<div id="collapseFive" class="accordion-body collapse">
+								<div class="accordion-inner">
+									Clear user interface, concise reports, intuitive controls
+									available everywhere at the tip of your fingers.
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<!--
 			<div class="row-fluid section1">
 				<div class="span5 offset1 asset">
 					<img class="img-polaroid" src="http://placehold.it/480x300">
 				</div>
 				<div class="span5 copy">
 					<p>
-					Lorem ipsum dolor sit amer, consectetur adipiscing elit. Donec porta,
-					mollis dui sagittis hendrerit rutrum, nuncljs asdfasfsad sdfsdfasdf 
-					sadfjklh khshfjkl hasfhkljklfj jasfjklsjfklj aljasfkljklj askljf;las
-					lkhalsjfklasj asljlkjaslfjlkjs faskljflaskj fljaskljklasjfkl asjfas
-					hjsflhaslfjlkj s;ljlasjfljasklfj lkjljsljlasjfkljl slfjljasldfjlsfj 
-					kljsafljasflj jlafjklsjdfljs ljfljsdfljasljf asljljsluwoirulsfoiualsfh
+						Lorem ipsum dolor sit amer, consectetur adipiscing elit. Donec porta,
+						mollis dui sagittis hendrerit rutrum, nuncljs asdfasfsad sdfsdfasdf 
+						sadfjklh khshfjkl hwsfhkljklfj jasfjklsjfklj aljasfkljklj askljf;las
+						lkhalsjfklasj asljlkjaslfjlkjs faskljflaskj fljaskljklasjfkl asjfas
+						hjsflhaslfjlkj s;ljlasjfljasklfj lkjljsljlasjfkljl slfjljasldfjlsfj 
+						kljsafljasflj jlafjklsjdfljs ljfljsdfljasljf asljljsluwoirulsfoiualsfh
 					</p>
 				</div>
 			</div>
-			<div class="row-fluid section2">
-				<div class="span5 offset1 copy copy-right">
-					<p>
-					Lorem ipsum dolor sit amer, consectetur adipiscing elit. Donec porta,
-					mollis dui sagittis hendrerit rutrum, nuncljs asdfasfsad sdfsdfasdf 
-					sadfjklh khshfjkl hasfhkljklfj jasfjklsjfklj aljasfkljklj askljf;las
-					lkhalsjfklasj asljlkjaslfjlkjs faskljflaskj fljaskljklasjfkl asjfas
-					hjsflhaslfjlkj s;ljlasjfljasklfj lkjljsljlasjfkljl slfjljasldfjlsfj 
-					kljsafljasflj jlafjklsjdfljs ljfljsdfljasljf asljljsluwoirulsfoiualsfh
-					</p>
-				</div>
-				<div class="span5 asset">
-					<img class="img-polaroid" src="http://placehold.it/480x300">
-				</div>
-			</div>
+			-->
 			<div class="row-fluid faq">
 				<div class="span10 offset1">
 					<h3>FAQ</h3>
-					<div class="accordion" id="accordion2">
+					<div class="accordion" id="accordion6">
 						<div class="accordion-group">
 							<div class="accordion-heading">
 								<a class="accordion-toggle" data-toggle="collapse"
-									data-parent="#accordion2" href="#collapseOne">
-									What does the FAQ stand for?
+									data-parent="#accordion6" href="#collapseSix">
+									What does R-Home stand for?
 								</a>
 							</div>
-							<div id="collapseOne" class="accordion-body collapse">
+							<div id="collapseSix" class="accordion-body collapse">
 								<div class="accordion-inner">
-									Frequently Asked Question
-								</div>
-							</div>
-						</div>
-						<div class="accordion-group">
-							<div class="accordion-heading">
-								<a class="accordion-toggle" data-toggle="collapse"
-									data-parent="#accordion2" href="#collapseTwo">
-									What's a frequently Asked Question?
-								</a>
-							</div>
-							<div id="collapseOne" class="accordion-body collapse">
-								<div class="accordion-inner">
-									A question which is commonly asked by users.
+									Remote Home in the sense of accesing your home
+									features remotely.
 								</div>
 							</div>
 						</div>
@@ -252,8 +371,7 @@
 					<p>This work is licensed under the
 					<a href="http://creativecommons.org/licenses/by-sa/3.0">CC
 							By-SA 3.0
-					</a>, without all the cruft that would otherwise be put at the
-					bottom of the page.</p>
+					</a></p>
 				</div>
 			</div>
 		</div>
