--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 			<!-- Font and paired font of .heading/.subheading -->
 			<div class="row-fluid heading">
 				<div class="span12">
-					<h1>R-Home</h1>
+					<h1>R-HOME</h1>
 				</div>
 			</div>
 			<div class="row-fluid subheading">
